<resources>
    <string name="app_name">Sunbox</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to server errors -->
    <string name="server_err">Remote Server Error</string>
    <string name="server_err_description">The application has encountered the following error with the remote server: %s</string>
    <string name="server_err_preferences">Preferences</string>
    <string name="server_err_close">Close</string>

    <!-- Strings related to WiFi error -->
    <string name="wifi_err_title">Unable to connect</string>
    <string name="wifi_err_msg">You need a network connection to use this application. Please turn on mobile network or Wi-Fi in Settings.</string>
    <string name="wifi_settings">Settings</string>
    <string name="wifi_close">Close</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="app_version_title">Application Version</string>
    <string name="app_version">1.0.0</string>

    <string name="pref_title_host_name">Host URL</string>
    <string name="pref_default_host">http://backoffice.ltd/sunbox</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">username</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_logging_in">The username or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="login_err_code">Invalid username and password!</string>
    <string name="login_url">http://192.168.0.178:8008/j_spring_security_check</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_location_name">Location Name</string>
    <string name="fragment_location_machines">Machines</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_locations">LocationsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <!-- Strings related to Location Cards -->
    <string name="card_title_gross">Current Gross</string>
    <string name="card_title_machine_details">Machine Details</string>
    <string name="card_title_machine_status">Machine Status</string>
    <string name="card_title_location_details">Location Details</string>
    <string name="card_title_location_stats">Location Statistics</string>
    <string name="card_label_date">Date - Present</string>
    <string name="card_label_total">Total</string>
    <string name="card_label_online">Online</string>
    <string name="card_label_offline">Offline</string>
    <string name="card_label_current_gross">Current Gross</string>
    <string name="card_label_previous_gross">Previous Gross</string>
    <string name="card_label_last_reading">Last Reading</string>
    <string name="card_label_drop">Drop</string>
    <string name="card_label_payout">Payout</string>
    <string name="card_label_top_grossing">Top Grossing</string>
    <string name="card_label_machines">Machines</string>
    <string name="card_label_in">IN</string>
    <string name="card_label_out">OUT</string>
    <string name="card_label_gross">GROSS</string>
    <string name="title_activity_slot_machine">SlotMachineActivity</string>
    <string name="title_activity_machine_details">MachineDetailsActivity</string>
    <string name="card_sub_head_status">Status</string>
    <string name="card_sub_head_movement">Movement</string>
    <string name="card_sub_head_history">History</string>
    <string name="title_activity_location_details">LocationDetailsActivity</string>
    <string name="card_sub_head_location_gross">Location Gross</string>
    <string name="card_sub_head_location_collection">Location Collections</string>
    <string name="title_activity_location_manage">LocationManageActivity</string>
    <string name="management_title">Management</string>
</resources>
