<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SlotMachineFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:id="@+id/machine_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-9999"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/asset_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border_bottom"
                    android:fontFamily="sans-serif-black"
                    android:paddingBottom="6dp"
                    android:text="-9999"
                    android:textAlignment="textEnd"
                    android:textAllCaps="true"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/card_label_in"
                        android:textAllCaps="true" />

                    <TextView
                        android:id="@+id/meter_IN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="000000"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/card_label_out"
                        android:textAllCaps="true" />

                    <TextView
                        android:id="@+id/meter_OUT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="000000"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/card_label_gross"
                        android:textAllCaps="true" />

                    <TextView
                        android:id="@+id/gross"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0"
                        android:textAlignment="textEnd" />
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/machine_online"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@color/onlineGreen"
                android:gravity="center"
                android:text="@string/card_label_online"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/machine_offline"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@color/onlineGreen"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/card_label_offline"
                android:textAllCaps="true"
                android:visibility="gone"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>