<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MachineDetailsActivity"
    tools:showIn="@layout/activity_machine_details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/white">
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/machine_gross_chart"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:background="@color/white"
                    android:layout_marginBottom="4dp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_sub_head_history"
                android:textAllCaps="true"
                android:layout_marginBottom="20dp"
                android:textSize="10dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:elevation="2dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/rect_shape">

                <TableRow
                    android:layout_marginBottom="4dp">
                    <TextView
                        android:layout_column="1"
                        android:text="IN"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"/>
                    <TextView
                        android:layout_column="2"
                        android:text="OUT"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"/>
                    <TextView
                        android:layout_column="3"
                        android:text="Move"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:fontFamily="sans-serif-black"/>
                    <TextView
                        android:layout_column="4"
                        android:text="Time"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:fontFamily="sans-serif-black"/>
                </TableRow>

                <TableRow
                    android:layout_marginBottom="4dp">
                    <TextView
                        android:layout_column="1"
                        android:text="000000"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_column="2"
                        android:text="000000"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_column="3"
                        android:text="0"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"/>
                    <TextView
                        android:layout_column="4"
                        android:text="21/11/2018 11:45 AM"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"/>
                </TableRow>

                <TableRow
                    android:layout_marginBottom="4dp">
                    <TextView
                        android:layout_column="1"
                        android:text="000000"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_column="2"
                        android:text="000000"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_column="3"
                        android:text="0"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"/>
                    <TextView
                        android:layout_column="4"
                        android:text="21/11/2018 11:45 AM"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"/>
                </TableRow>
                <TableRow
                    android:layout_marginBottom="4dp">
                    <TextView
                        android:layout_column="1"
                        android:text="000000"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_column="2"
                        android:text="000000"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_column="3"
                        android:text="0"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"/>
                    <TextView
                        android:layout_column="4"
                        android:text="21/11/2018 11:45 AM"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"/>
                </TableRow>

            </TableLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_sub_head_movement"
                android:textAllCaps="true"
                android:layout_marginBottom="20dp"
                android:textSize="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="Online"
                android:textAllCaps="true"
                android:textSize="20dp"
                android:gravity="center"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/white"
                android:background="@color/onlineGreen"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp"
                android:background="@color/offlineRed"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Offline"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="xx/xx/xx"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-black"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_sub_head_status"
                android:textAllCaps="true"
                android:textSize="10dp" />
        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>